--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ after_sucess:
 - yarn build
 before_deploy:
 - echo "Initializing deployment..."
+- cd build
 deploy:
   provider: pages
   skip-cleanup: true
