--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "collections",
   "version": "1.0.0",
   "private": true,
+  "homepage": "https://synthetiquely.github.io/collections/",
   "dependencies": {
     "glamor": "^2.20.40",
     "glamorous": "^4.12.0",
