--- a/package.json
+++ b/package.json
@@ -56,9 +56,8 @@
     "build": "node scripts/build.js",
     "predeploy": "yarn build",
     "deploy": "node scripts/deploy.js",
-    "test": "concurrently \"yarn start\" \"node scripts/test.js --env=jsdom\"",
-    "test:coverage":
-      "concurrently \"yarn start\" \"node scripts/test.js --env=jsdom --coverage\"",
+    "test": "node scripts/test.js --env=jsdom",
+    "test:coverage": "node scripts/test.js --env=jsdom --coverage",
     "lint": "eslint ./src/**/*.j*",
     "prettier": "prettier --write --config ./.prettierrc ./src/**/*.j*"
   },
