--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,12 @@ branches:
     - master
 install:
 - yarn
+before_script:
+- "export DISPLAY=:99.0"
+- "sh -e /etc/init.d/xvfb start"
+- sleep 3 # give xvfb some time to start
+- yarn start # start a Web server
+- sleep 3 # give Web server some time to bind to sockets, etc 
 script:
 - yarn lint
 before_deploy:
