--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "predeploy": "yarn build",
     "deploy": "node scripts/deploy.js",
     "test": "node scripts/test.js --env=jsdom",
+    "test:coverage": "node scripts/test.js --env=jsdom --coverage",
     "lint": "eslint ./src/**/*.j*",
     "prettier": "prettier --write --config ./.prettierrc ./src/**/*.j*"
   },
