--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_script:
 - "export DISPLAY=:99.0"
 - "sh -e /etc/init.d/xvfb start"
 - sleep 3 # give xvfb some time to start
-- yarn start # start a Web server
+- yarn start & # start a Web server
 - sleep 3 # give Web server some time to bind to sockets, etc 
 script:
 - yarn lint
