--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ branches:
 install:
 - yarn
 before_script:
-- "export DISPLAY=:99.0"
-- "sh -e /etc/init.d/xvfb start"
+- export DISPLAY=:99.0
+- sh -e /etc/init.d/xvfb start
 - sleep 3
 - yarn start &
 - sleep 15
