--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,15 @@ cache: yarn
 branches:
   only:
     - master
+addons:
+    apt:
+      packages:
+        - xvfb
 install:
 - yarn
 before_script:
-- export DISPLAY=:99.0
-- sh -e /etc/init.d/xvfb start
+- export DISPLAY=':99.0'
+- Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
 - sleep 3
 - yarn start &
 - sleep 15
