--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "test": "node scripts/test.js --env=jsdom",
     "test:coverage":
       "set DEBUG=nightmare & node scripts/test.js --env=jsdom --coverage",
+    "test:CI": "DEBUG=nightmare & node scripts/test.js --env=jsdom --coverage",
     "lint": "eslint ./src/**/*.j*",
     "prettier": "prettier --write --config ./.prettierrc ./src/**/*.j*"
   },
