Make additional script for ci

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ before_script:
 - sleep 15
 script:
 - yarn lint
+- yarn test:CI
 before_deploy:
 - yarn build
 - echo "Initializing deployment..."
