--- a/package.json
+++ b/package.json
@@ -50,7 +50,9 @@
     "predeploy": "yarn build",
     "deploy": "node scripts/deploy.js",
     "test": "node scripts/test.js --env=jsdom",
-    "test:coverage": "node scripts/test.js --env=jsdom --coverage --silent",
+    "test:coverage":
+      "set DEBUG=nightmare & node scripts/test.js --env=jsdom --coverage",
+    "test:CI": "DEBUG=nightmare & node scripts/test.js --env=jsdom --coverage",
     "lint": "eslint ./src/**/*.j*",
     "prettier": "prettier --write --config ./.prettierrc ./src/**/*.j*"
   },
