--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "test:coverage":
       "set DEBUG=nightmare & node scripts/test.js --env=jsdom --coverage",
     "test:CI":
-      "DEBUG=nightmare & xvfb-run node scripts/test.js --env=jsdom --coverage",
+      "DEBUG=nightmare & xvfb-run -a node scripts/test.js --env=jsdom --coverage",
     "lint": "eslint ./src/**/*.j*",
     "prettier": "prettier --write --config ./.prettierrc ./src/**/*.j*"
   },
